Version 2.02.97 - 
===============================
  Add --activate ay to lvcreate.
  Add --activate ay to lvchange.
  Add --activate ay to pvscan.
  Add --activate ay to vgchange.
  Add support for volume autoactivation using lvmetad.
  Add --activate synonym for --available arg and prefer --activate.
  Never issue discards when LV extents are being reconfigured, not deleted.
  Allow release_lv_segment_area to fail as functions it calls can fail.
  Open device read-only to obtain readahead value.
  Fix lvconvert error path NULL pointer dereference.
  Check for create_instance() fail in pvscan_lvmetad_single().
  Use 64bit math for reserved memory and stack.
  Add tests for kernel_send() errors in cmirrod.
  Print clean_bits in pull_state, fix cut&paste typo in cmirrord.
  Add tests for errors from closedir(), close() in cmirrord.
  Fix missing sync of filesystem when creating thin volume snapshot.

Version 2.02.96 - 8th June 2012
===============================
  Upstream source repo now fedorahosted.org git not sources.redhat.com CVS.
  Fix error paths for regex filter initialization.
  Re-enable partial activation of non-thin LVs until it can be fixed. (2.02.90)
  Fix alloc cling to cling to PVs already found with contiguous policy.
  Fix cling policy not to behave like normal policy if no previous LV seg.
  Fix allocation loop not to use later policies when --alloc cling without tags.
  Append _TO_LVSEG to names of internal A_CONTIGUOUS and A_CLING flags.
  Add missing pkg init --with-systemdsystemunitdir in configure.in (2.02.92).
  Fix division by zero if PV with zero PE count is used during vgcfgrestore.
  Add initial support for thin pool lvconvert.
  Fix lvrename for thin volumes (regression in for_each_sub_lv). (2.02.89)
  Fix up-convert when mirror activation is controlled by volume_list and tags.
  Warn of deadlock risk when using snapshots of mirror segment type.
  Fix bug in cmirror that caused incorrect status info to print on some nodes.